--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cloud_firestore_platform_interface: 6.2.3
   cloud_firestore_web: 3.12.3
   collection: 1.18.0
+  csv: 6.0.0
   equatable: 2.0.5
   firebase_auth: 4.19.5
   firebase_auth_platform_interface: 7.2.6
@@ -43,6 +44,12 @@ dependencies:
   firebase_performance_web: 0.1.6+5
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.3.1
+  flutter_secure_storage: 9.2.2
+  flutter_secure_storage_linux: 1.2.1
+  flutter_secure_storage_macos: 3.1.2
+  flutter_secure_storage_platform_interface: 1.1.2
+  flutter_secure_storage_web: 1.2.1
+  flutter_secure_storage_windows: 3.1.2
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   go_router: 12.1.3
@@ -61,7 +68,6 @@ dependencies:
   path_provider_android: 2.2.5
   path_provider_foundation: 2.4.0
   path_provider_platform_interface: 2.1.2
-  plaid_flutter: ^3.1.8
   plugin_platform_interface: 2.1.8
   provider: 6.1.2
   rxdart: 0.27.7
@@ -75,11 +81,13 @@ dependencies:
   sign_in_with_apple_web: 1.0.1
   sqflite: 2.2.6
   stream_transform: 2.1.0
+  synchronized: 3.1.0
   timeago: 3.6.1
   url_launcher: 6.2.5
   url_launcher_android: 6.3.0
   url_launcher_ios: 6.2.5
   url_launcher_platform_interface: 2.3.2
+  webview_flutter: ^4.8.0
 
 
   # The following adds the Cupertino Icons font to your application.
